// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useDraggable should allow for the value and dragging state to be controlled 1`] = `
<button
  aria-valuenow="20"
  class="rmd-button rmd-button--text"
  type="button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`useDraggable should work correctly for keyboard events 1`] = `
<button
  aria-valuenow="50"
  class="rmd-button rmd-button--text"
  type="button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`useDraggable should work correctly with mouse events 1`] = `
<button
  aria-valuenow="50"
  class="rmd-button rmd-button--text"
  type="button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`useDraggable should work correctly with touch event handlers 1`] = `
<button
  aria-valuenow="50"
  class="rmd-button rmd-button--text"
  type="button"
>
  <span>
    Button
  </span>
</button>
`;
